<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/NameTripSearch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Search">


    <ImageView
        android:id="@+id/logo3"
        android:layout_width="105dp"
        android:layout_height="48dp"
        android:contentDescription="@string/Logo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/Back_button"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="52dp"
        android:fontFamily="sans-serif"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/MyTripsTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/Back_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="35dp"
        android:background="@color/transparent"
        android:foreground="@drawable/ic_back"
        app:layout_constraintBottom_toTopOf="@+id/nameofthetrip"
        app:layout_constraintEnd_toStartOf="@+id/MyTripsTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/MyTripsTitle"
        android:layout_width="213dp"
        android:layout_height="32dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="568dp"
        android:layout_toEndOf="@+id/Back_button"
        android:text="Search for a trip by name or destination"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Back_button" />

    <EditText
        android:id="@+id/nameofthetrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MyTripsTitle"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_perm_identity_24"
        android:drawablePadding="20dp"
        android:hint="Name of the trip:"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/destination"
        app:layout_constraintStart_toStartOf="@id/MyTripsTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.822" />

    <EditText
        android:id="@+id/destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameofthetrip"
        android:layout_marginTop="260dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_add_location_alt_24"
        android:drawablePadding="20dp"
        android:hint="Destination:"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/SearchTripsButton"
        app:layout_constraintStart_toStartOf="@id/MyTripsTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/SearchTripsButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="143dp"
        android:layout_height="61dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="143dp"
        android:background="@color/red"
        android:drawableStart="@drawable/search_icon"
        android:onClick="searchButton"
        android:text="@string/SearchButton"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:icon="@drawable/search_icon"
        app:layout_constraintBottom_toBottomOf="@id/listView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destination"
        app:layout_constraintVertical_bias="0.51"
        tools:ignore="TouchTargetSizeCheck" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SearchTripsButton" />


</androidx.constraintlayout.widget.ConstraintLayout>






